--- a/Application/.swiftlint.yml
+++ b/Application/.swiftlint.yml
@@ -7,7 +7,7 @@ line_length:
   warning:
     140
   error:
-    200
+    300
   ignores_urls:
     true
 file_length:
@@ -36,3 +36,5 @@ disabled_rules:
   - force_cast
   - force_try
   - nesting
+  - type_name
+  - identifier_name
