--- a/Application/FireNote/GoogleService-Info.plist
+++ b/Application/FireNote/GoogleService-Info.plist
@@ -3,34 +3,34 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>521629116754-u8tgdlmm6btjo078jovb840b5pn75i3r.apps.googleusercontent.com</string>
+	<string>496027863944-80cn71sks9nkevc2380evfgj2ea7ruhh.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.521629116754-u8tgdlmm6btjo078jovb840b5pn75i3r</string>
+	<string>com.googleusercontent.apps.496027863944-80cn71sks9nkevc2380evfgj2ea7ruhh</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDjdkV46kgH6ClHW_w7KCdKH3RMQRngJOc</string>
+	<string>AIzaSyAv6CgelsPyxsTdC-luNJuBEcMzeL3CiB4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>521629116754</string>
+	<string>496027863944</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.10x.firenote</string>
 	<key>PROJECT_ID</key>
-	<string>firenote-ios</string>
+	<string>firenote-cc166</string>
 	<key>STORAGE_BUCKET</key>
-	<string>firenote-ios.appspot.com</string>
+	<string>firenote-cc166.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:521629116754:ios:2e720d245388ca220db28b</string>
+	<string>1:496027863944:ios:67536f712902dbd247c83d</string>
 	<key>DATABASE_URL</key>
-	<string>https://firenote-ios.firebaseio.com</string>
+	<string>https://firenote-cc166.firebaseio.com</string>
 </dict>
 </plist>
