Add Aztec library and partly implement the editor screen.

--- a/Application/Podfile
+++ b/Application/Podfile
@@ -18,7 +18,7 @@ target 'FireNote' do
   pod 'TPKeyboardAvoiding'
   pod 'SwiftKeychainWrapper'
   pod 'R.swift'
-  pod 'PKHUD'
+  pod 'WordPress-Aztec-iOS'
 
   # Firebase authentication
   pod 'FirebaseUI/Auth'
