Implement the Aztec library to make a toolbar for editor screen.

--- a/Application/Podfile
+++ b/Application/Podfile
@@ -19,6 +19,7 @@ target 'FireNote' do
   pod 'SwiftKeychainWrapper'
   pod 'R.swift'
   pod 'WordPress-Aztec-iOS'
+  pod 'KeyboardNotificationsObserver'
 
   # Firebase authentication
   pod 'FirebaseUI/Auth'
