--- a/Application/FireNote/Info.plist
+++ b/Application/FireNote/Info.plist
@@ -58,5 +58,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access to Photos is needed to attach chosen photos or videos to the note.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Access to Camera is needed to attach photos or videos from camera directly to the note.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Access to Microphone is needed to add the sound to the attached videos.</string>
+	<key>NSFileProviderPresenceUsageDescription</key>
+	<string>Access to Files is needed to attach documetns to the note.</string>
 </dict>
 </plist>
