Partly implement location picker view.

--- a/Application/Podfile
+++ b/Application/Podfile
@@ -20,6 +20,7 @@ target 'FireNote' do
   pod 'R.swift'
   pod 'WordPress-Aztec-iOS'
   pod 'KeyboardNotificationsObserver'
+  pod 'GoogleMaps'
 
   # Firebase authentication
   pod 'FirebaseUI/Auth'
