Finish to implement the location picker. Move the location business logic to LocationManager class.

--- a/Application/Podfile
+++ b/Application/Podfile
@@ -20,7 +20,10 @@ target 'FireNote' do
   pod 'R.swift'
   pod 'WordPress-Aztec-iOS'
   pod 'KeyboardNotificationsObserver'
+
+  # Google Maps
   pod 'GoogleMaps'
+  pod 'GooglePlaces'
 
   # Firebase authentication
   pod 'FirebaseUI/Auth'
